RESOLVED FIXED268855
Unified PDF: HUDs for embedded PDFs don't re-position after page zoom
https://bugs.webkit.org/show_bug.cgi?id=268855
Summary Unified PDF: HUDs for embedded PDFs don't re-position after page zoom
Tim Horton
Reported 2024-02-06 14:04:21 PST
Unified PDF: HUDs for embedded PDFs don't re-position after page zoom
Attachments
Tim Horton
Comment 1 2024-02-06 14:04:27 PST
Tim Horton
Comment 2 2024-02-06 14:26:58 PST
EWS
Comment 3 2024-02-06 15:37:23 PST
Committed 274175@main (7728d242f2cb): <https://commits.webkit.org/274175@main> Reviewed commits have been landed. Closing PR #23954 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.