Unified PDF: HUDs for embedded PDFs don't re-position after page zoom https://bugs.webkit.org/show_bug.cgi?id=268855 rdar://122038277

Reviewed by Simon Fraser.

* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::geometryDidChange):
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.mm:
(WebKit::PDFPluginBase::geometryDidChange):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::geometryDidChange):
Make PDFPluginBase::geometryDidChange report back whether there was any change,
and use that to bail, instead of implementing the bailing in each subclass.

Don't bail if the transform changes, since we need to update the HUD (at least)
in that case, and that matches historical behavior.

Canonical link: https://commits.webkit.org/274175@main